--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "flow-cli"
+name = "flow-win32"
 version = "0.1.0"
 authors = ["ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-clap = "2.*"
 flow-core = { path = "../flow-core" }
-flow-qemu = { path = "../flow-qemu" }
-flow-win32 = { path = "../flow-win32" }
+byteorder = "1.*"
