--- a/flow-qemu/bridge/Cargo.toml
+++ b/flow-qemu/bridge/Cargo.toml
@@ -16,6 +16,7 @@ rand = "0.7.0"
 tokio = "0.1.22"
 capnp = "0.10.1"
 capnp-rpc = "0.10.0"
+flow-va = { path = "../../flow-va" }
 
 [lib]
 name = "flow_qemu_bridge"
