--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -5,3 +5,7 @@ authors = ["ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+address = { path = "address" }
+arch = { path = "arch" }
+mem = { path = "mem" }
+flow-win32 = { path = "../flow-win32" }
