--- a/flow-va/Cargo.toml
+++ b/flow-va/Cargo.toml
@@ -11,5 +11,7 @@ x64-pae = []
 x86 = []
 
 [dependencies]
-flow-core = { path = "../flow-core" }
+address = { path = "../flow-core/address" }
+arch = { path = "../flow-core/arch" }
+mem = { path = "../flow-core/mem" }
 byteorder = "1.*"
