--- a/flow-qemu/Cargo.toml
+++ b/flow-qemu/Cargo.toml
@@ -15,9 +15,11 @@ capnp-rpc = "0.10.0"
 bufstream = "0.*"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-flow-core = { path = "../flow-core" }
 gdb_remote = { git = "https://github.com/emoon/gdb-remote" }
 gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol" }
+address = { path = "../flow-core/address" }
+arch = { path = "../flow-core/arch" }
+mem = { path = "../flow-core/mem" }
 
 [[example]]
 name = "monitor_read"
