--- a/flow-qemu/bridge/Cargo.toml
+++ b/flow-qemu/bridge/Cargo.toml
@@ -16,7 +16,9 @@ rand = "0.7.0"
 tokio = "0.1.22"
 capnp = "0.10.1"
 capnp-rpc = "0.10.0"
-flow-core = { path = "../../flow-core" }
+address = { path = "../../flow-core/address" }
+arch = { path = "../../flow-core/arch" }
+mem = { path = "../../flow-core/mem" }
 flow-va = { path = "../../flow-va" }
 
 [lib]
