qemu bridge now splits up big reads in chunks of 32mb to circumvent capnproto size limitations; added basic nt header parser via a statically read array

--- a/flow-qemu/Cargo.toml
+++ b/flow-qemu/Cargo.toml
@@ -20,6 +20,7 @@ gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol
 address = { path = "../flow-core/address" }
 arch = { path = "../flow-core/arch" }
 mem = { path = "../flow-core/mem" }
+log = { version = "0.*", default-features = false }
 
 [[example]]
 name = "monitor_read"
