--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 clap = "2.*"
+pretty_env_logger = "0.*"
 flow-core = { path = "../flow-core" }
 flow-qemu = { path = "../flow-qemu" }
 flow-win32 = { path = "../flow-win32" }
