--- a/flow-va/Cargo.toml
+++ b/flow-va/Cargo.toml
@@ -14,4 +14,5 @@ x86 = []
 address = { path = "../flow-core/address" }
 arch = { path = "../flow-core/arch" }
 mem = { path = "../flow-core/mem" }
+log = { version = "0.*", default-features = false }
 byteorder = "1.*"
