--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -11,5 +11,5 @@ mem = { path = "../flow-core/mem" }
 log = { version = "0.*", default-features = false }
 byteorder = "1.*"
 num = "0.*"
-goblin = "0.0.24"
+goblin = { git = "https://github.com/ko1N/goblin", features = ["pe_mapped"] }
 scroll = "0.9"
