--- a/flow-qemu/bridge/Cargo.toml
+++ b/flow-qemu/bridge/Cargo.toml
@@ -20,7 +20,7 @@ address = { path = "../../flow-core/address" }
 arch = { path = "../../flow-core/arch" }
 mem = { path = "../../flow-core/mem" }
 flow-va = { path = "../../flow-va" }
-log = { version = "0.*", default-features = false }
+pretty_env_logger = "0.*"
 
 [lib]
 name = "flow_qemu_bridge"
