--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -10,3 +10,8 @@ pretty_env_logger = "0.*"
 flow-core = { path = "../flow-core" }
 flow-qemu = { path = "../flow-qemu" }
 flow-win32 = { path = "../flow-win32" }
+address = { path = "../flow-core/address" }
+mem = { path = "../flow-core/mem" }
+goblin = { path = "../../goblin-mapped" }
+uuid = "0.7.4" # remove this if goblin has this built in
+byteorder = "1.*"
