added sysproc eprocess scanning; added pdb caching to flow-win32

--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -14,3 +14,7 @@ num = "0.*"
 goblin = { path = "../../goblin-mapped" }
 scroll = "0.9"
 pretty-hex = "0.*"
+clap = "2.*"
+uuid = "0.*" # remove this if goblin has this built in
+duma = "*"
+dirs = "2.*"
