switched goblin to github url
Former-commit-id: 82d7c54322b12d5f683ff38f4e399235bc39bbc7

--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -12,4 +12,5 @@ flow-qemu = { path = "../flow-qemu" }
 flow-win32 = { path = "../flow-win32" }
 address = { path = "../flow-core/address" }
 mem = { path = "../flow-core/mem" }
-goblin = { path = "../../goblin-mapped" }
+goblin = { git = "https://github.com/ko1N/goblin" }
+pdb = { git = "https://github.com/willglynn/pdb" }
