--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -11,7 +11,7 @@ mem = { path = "../flow-core/mem" }
 log = { version = "0.*", default-features = false }
 byteorder = "1.*"
 num = "0.*"
-goblin = { path = "../../goblin-mapped" }
+goblin = { git = "https://github.com/ko1N/goblin" }
 scroll = "0.9"
 pretty-hex = "0.*"
 clap = "2.*"
