added feature to enable qemu main mutex locking on memory reads
Former-commit-id: f21fbe1c0bcb548e6763a7c2c25ada1e28c8285f

--- a/flow-qemu/bridge/Cargo.toml
+++ b/flow-qemu/bridge/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 
+[features]
+default = ["locking"]
+locking = []
+
 [build-dependencies]
 capnpc = "0.10.1"
 
