formatted some files; added forward declares in flow-core so the core crate serves as the one and only external requirement; added WinProcess
Former-commit-id: f625a073890f2838b9c4e122b7e08464ad48c7fc

--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2018"
 address = { path = "address" }
 arch = { path = "arch" }
 mem = { path = "mem" }
+
+# integrate win32, linux, qemu, etc in core if applicable
+# integrate va in core as a subcrate?
 flow-win32 = { path = "../flow-win32" }
