cleaned up code; added basic pdb struct parser
Former-commit-id: e0bf09c217259e088375284bdbbda613f1fd5d68

--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -18,3 +18,4 @@ clap = "2.*"
 uuid = "0.*" # remove this if goblin has this built in
 duma = "*"
 dirs = "2.*"
+pdb = { git = "https://github.com/willglynn/pdb" }
