added socket url parsing; added tcp support

--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -12,3 +12,4 @@ flow-qemu = { path = "../flow-qemu" }
 flow-win32 = { path = "../flow-win32" }
 goblin = { git = "https://github.com/ko1N/goblin" }
 pdb = { git = "https://github.com/willglynn/pdb" }
+url = "2.1.0"
