--- a/flow-qemu/Cargo.toml
+++ b/flow-qemu/Cargo.toml
@@ -10,7 +10,7 @@ capnpc = "0.10.1"
 [dependencies]
 clap = "2.*"
 tokio = "0.1.22"
-capnp = "0.10.1"
+capnp = "0.10.3"
 capnp-rpc = "0.10.0"
 bufstream = "0.*"
 serde = { version = "1.0", features = ["derive"] }
@@ -21,6 +21,7 @@ address = { path = "../flow-core/address" }
 arch = { path = "../flow-core/arch" }
 mem = { path = "../flow-core/mem" }
 log = { version = "0.*", default-features = false }
+url = "2.1.0"
 
 [[example]]
 name = "monitor_read"
