--- a/flow-qemu/bridge/Cargo.toml
+++ b/flow-qemu/bridge/Cargo.toml
@@ -18,13 +18,14 @@ libc = "*"
 lazy_static = "1.4.0"
 rand = "0.7.0"
 tokio = "0.1.22"
-capnp = "0.10.1"
+capnp = "0.10.3"
 capnp-rpc = "0.10.0"
 address = { path = "../../flow-core/address" }
 arch = { path = "../../flow-core/arch" }
 mem = { path = "../../flow-core/mem" }
 flow-va = { path = "../../flow-va" }
 pretty_env_logger = "0.*"
+url = "2.1.0"
 
 [lib]
 name = "flow_qemu_bridge"
