updated to latest uuid crate
Former-commit-id: 9b70e361f6a72a57a744738a9ac5d6ff081010fd

--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -15,7 +15,7 @@ goblin = { git = "https://github.com/ko1N/goblin" }
 scroll = "0.9"
 pretty-hex = "0.*"
 clap = "2.*"
-uuid = "0.*" # remove this if goblin has this built in
+uuid = "0.8" # remove this if goblin has this built in
 duma = "*"
 dirs = "2.*"
 pdb = { git = "https://github.com/willglynn/pdb" }
