--- a/flow-qemu/Cargo.toml
+++ b/flow-qemu/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 capnpc = "0.10.1"
 
 [dependencies]
-clap = "2.*"
+clap = "2.33.0"
 tokio = "0.1.22"
 capnp = "0.10.3"
 capnp-rpc = "0.10.0"
-bufstream = "0.*"
+bufstream = "0.1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 gdb_remote = { git = "https://github.com/emoon/gdb-remote" }
@@ -20,7 +20,7 @@ gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol
 address = { path = "../flow-core/address" }
 arch = { path = "../flow-core/arch" }
 mem = { path = "../flow-core/mem" }
-log = { version = "0.*", default-features = false }
+log = { version = "0.4.8", default-features = false }
 url = "2.1.0"
 
 [[example]]
