--- a/flow-qemu/bridge/Cargo.toml
+++ b/flow-qemu/bridge/Cargo.toml
@@ -16,11 +16,11 @@ locking = []
 capnpc = "0.10.1"
 
 [dependencies]
-ctor = "*"
-libc-print = "*"
-libc = "*"
+ctor = "0.1.12"
+libc-print = "0.1.11"
+libc = "0.2.65"
 lazy_static = "1.4.0"
-rand = "0.7.0"
+rand = "0.7.2"
 tokio = "0.1.22"
 capnp = "0.10.3"
 capnp-rpc = "0.10.0"
@@ -28,5 +28,5 @@ address = { path = "../../flow-core/address" }
 arch = { path = "../../flow-core/arch" }
 mem = { path = "../../flow-core/mem" }
 vat = { path = "../../flow-core/vat" }
-pretty_env_logger = "0.*"
+pretty_env_logger = "0.3.1"
 url = "2.1.0"
