--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -8,16 +8,16 @@ edition = "2018"
 address = { path = "../flow-core/address" }
 arch = { path = "../flow-core/arch" }
 mem = { path = "../flow-core/mem" }
-log = { version = "0.*", default-features = false }
-byteorder = "1.*"
-num = "0.*"
+log = { version = "0.4.8", default-features = false }
+byteorder = "1.3.2"
+num = "0.2.0"
 goblin = { git = "https://github.com/ko1N/goblin" }
 scroll = "0.9"
-pretty-hex = "0.*"
-clap = "2.*"
+pretty-hex = "0.1.1"
+clap = "2.33.0"
 uuid = "0.8" # remove this if goblin has this built in
-duma = "*"
-dirs = "2.*"
+duma = "0.1.0"
+dirs = "2.0.2"
 pdb = { git = "https://github.com/willglynn/pdb" }
-url = "1.7.2"
-failure = { version = "0.1.5", features = [] }
+url = "2.1.0"
+failure = { version = "0.1.6", features = [] }
