--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+image: "ekidd/rust-musl-builder:latest"
+
 stages:
   - test
   - build
@@ -29,3 +31,41 @@ linux-native:
       - target/release/libflow_qemu.rlib
       - target/release/libflow_qemu_bridge.rlib
       - target/release/flow-cli
+
+linux-musl:
+  stage: build
+  before_script:
+    - sudo apt-get update
+    - sudo apt-get install -yq capnproto
+  script:
+    - rustc --version
+    - cargo --version
+    - cargo build --release --target x86_64-unknown-linux-musl
+  artifacts:
+    paths:
+      - target/x86_64-unknown-linux-musl/release/libflow_core.rlib
+      - target/x86_64-unknown-linux-musl/release/libflow_qemu.rlib
+      - target/x86_64-unknown-linux-musl/release/libflow_qemu_bridge.rlib
+      - target/x86_64-unknown-linux-musl/release/flow-cli
+
+windows-mingw-x64:
+  stage: build
+  before_script:
+    - sudo apt-get update
+    - sudo apt-get install -yq capnproto
+    - sudo apt-get install -yq gcc-mingw-w64
+    - rustup target add x86_64-pc-windows-gnu
+    - sudo chmod 777 /home/rust/.cargo/config
+    - echo "[target.x86_64-pc-windows-gnu]" >> ~/.cargo/config
+    - echo "linker = \"/usr/bin/x86_64-w64-mingw32-gcc\"" >> ~/.cargo/config
+    - echo "ar = \"/usr/x86_64-w64-mingw32/bin/ar\"" >> ~/.cargo/config
+  script:
+    - rustc --version
+    - cargo --version
+    - cargo build --release --target x86_64-pc-windows-gnu
+  artifacts:
+    paths:
+      - target/x86_64-pc-windows-gnu/release/libflow_core.rlib
+      - target/x86_64-pc-windows-gnu/release/libflow_qemu.rlib
+      - target/x86_64-pc-windows-gnu/release/libflow_qemu_bridge.rlib
+      - target/x86_64-pc-windows-gnu/release/flow-cli.exe
