fixed clippy ci step
Former-commit-id: a0887aa8403069c6136003f0681606e7783f591f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,8 @@ clippy:
   stage: test
   image: "rust:latest"
   before_script:
+    - apt-get update
+    - apt-get install -yq capnproto
     - rustup component add clippy
   script:
     - rustc --version
