--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 [dependencies]
 clap = "2.33.0"
+toml = "0.5"
+serde = "1.0.97"
+serde_derive = "1.0"
 pretty_env_logger = "0.3.1"
 flow-core = { path = "../flow-core" }
 flow-win32 = { path = "../flow-win32" }
