--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 authors = ["ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 
+[build-dependencies]
+clap = { version = "2.33.0", features = ["yaml"] }
+
 [dependencies]
-clap = "2.33.0"
+clap = { version = "2.33.0", features = ["yaml"] }
 toml = "0.5"
 serde = "1.0.97"
 serde_derive = "1.0"
