added process helper and worked on keyboard implementation

--- a/flow-cli/src/cli.yml
+++ b/flow-cli/src/cli.yml
@@ -44,3 +44,5 @@ subcommands:
         subcommands:
             - ls:
                 about: lists all running processes
+    - keylog:
+        about: logs all pressed keys
