added write wrappers
Former-commit-id: 93ec3bd119f080adddb0f1d484d003fa0e9768d5

--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -15,6 +15,7 @@ tokio = "0.1.22"
 capnp = "0.10.3"
 capnp-rpc = "0.10.0"
 url = "2.1.0"
+unicorn = "0.9.1" # TODO: optional feature
 
 # example deps
 clap = "2.33.0"
