--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -15,6 +15,7 @@ tokio = "0.1.22"
 capnp = "0.10.3"
 capnp-rpc = "0.10.0"
 url = "2.1.0"
+procfs = "0.7.6"
 unicorn = { version = "0.9.1", optional = true }
 
 # example deps
@@ -25,5 +26,9 @@ default = []
 emulator = ["unicorn"]
 
 [[example]]
-name = "read"
-path = "examples/read.rs"
+name = "read_bridge"
+path = "examples/read_bridge.rs"
+
+[[example]]
+name = "read_procfs"
+path = "examples/read_procfs.rs"
