--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -12,7 +12,8 @@ clap = { version = "2.33.0", features = ["yaml"] }
 toml = "0.5"
 serde = "1.0.97"
 serde_derive = "1.0"
-pretty_env_logger = "0.3.1"
+simple_logger = "1.0.1"
+log = "0.4.8"
 flow-core = { path = "../flow-core" }
 flow-win32 = { path = "../flow-win32" }
 goblin = { git = "https://github.com/ko1N/goblin" }
