--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -15,11 +15,13 @@ tokio = "0.1.22"
 capnp = "0.10.3"
 capnp-rpc = "0.10.0"
 url = "2.1.0"
-procfs = "0.7.6"
 lazy_static = "1.4.0"
 unicorn = { version = "0.9.1", optional = true }
 
-# example deps
+[target.'cfg(linux)'.dependencies]
+procfs = "0.7.6"
+
+[dev-dependencies]
 clap = "2.33.0"
 
 [features]
