--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -18,7 +18,7 @@ url = "2.1.0"
 lazy_static = "1.4.0"
 unicorn = { version = "0.9.1", optional = true }
 
-[target.'cfg(linux)'.dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
 procfs = "0.7.6"
 
 [dev-dependencies]
@@ -28,9 +28,6 @@ clap = "2.33.0"
 default = []
 bridge = [] # enables the connector bridge (requires tokio)
 emulator = ["unicorn"] # enables the process emulator (requires unicorn engine)
-
-[target.'cfg(linux)'.features]
-qemu_procfs = [] # enables the qemu_procfs connector (requires procfs)
 
 [[example]]
 name = "read_bridge"
