--- a/flow-cli/src/cli.yml
+++ b/flow-cli/src/cli.yml
@@ -39,7 +39,16 @@ subcommands:
                     - export:
                         subcommands:
                             - ls:
-                                about: lists all module exports within the given kernel module
+                                about: lists all exports within the given kernel module
+                                args:
+                                    - module_name:
+                                        help: the name of the kernel module thats being inspected
+                                        index: 1
+                                        required: true
+                    - section:
+                        subcommands:
+                            - ls:
+                                about: lists all sections within the given kernel module
                                 args:
                                     - module_name:
                                         help: the name of the kernel module thats being inspected
