--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -16,6 +16,7 @@ capnp = "0.10.3"
 capnp-rpc = "0.10.0"
 url = "2.1.0"
 lazy_static = "1.4.0"
+regex = "1.3.1"
 unicorn = { version = "0.9.1", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
