--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -10,6 +10,7 @@ log = { version = "0.4.8", default-features = false }
 byteorder = "1.3.2"
 num = "0.2.0"
 goblin = { git = "https://github.com/ko1N/goblin" }
+pelite = "0.8"
 scroll = "0.9"
 pretty-hex = "0.1.1"
 clap = "2.33.0"
