moved all connectors into this repository and seperated them out in the connectors subfolder.
Former-commit-id: 48672455e1162842434a524c018731886933dc6f

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,19 @@ members = [
     "flow-core",
     "flow-derive",
     "flow-win32",
-    "flow-ffi",
+    #"flow-ffi",
     "flow-cli",
+    "connectors/flow-bridge",
+    "connectors/flow-qemu-bridge",
+    "connectors/flow-qemu-procfs",
 ]
 default-members = [
     "flow-core",
     "flow-derive",
     "flow-win32",
-    "flow-ffi",
+    #"flow-ffi",
     "flow-cli",
+    "connectors/flow-bridge",
+    "connectors/flow-qemu-bridge",
+    "connectors/flow-qemu-procfs",
 ]
