--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -17,6 +17,7 @@ log = "0.4.8"
 flow-core = { path = "../flow-core" }
 flow-derive = { path = "../flow-derive" }
 flow-win32 = { path = "../flow-win32" }
+flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }
 pdb = { git = "https://github.com/willglynn/pdb" }
 url = "2.1.0"
 win_key_codes = "0.1.2"
