--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -5,10 +5,9 @@ authors = ["ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+dataview = "0.1"
 byteorder = "1.3.2"
 log = { version = "0.4.8", default-features = false }
-libc-print = "0.1.11"
-lazy_static = "1.4.0"
 regex = "1.3.1"
 unicorn = { version = "0.9.1", optional = true }
 
