--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -11,8 +11,6 @@ clap = { version = "2.33.0", features = ["yaml"] }
 flow-core = { path = "../flow-core" }
 flow-derive = { path = "../flow-derive" }
 flow-win32 = { path = "../flow-win32" }
-flow-bridge = { path = "../connectors/flow-bridge", optional = true }
-flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs", optional = true }
 clap = { version = "2.33.0", features = ["yaml"] }
 toml = "0.5"
 serde = "1.0.97"
@@ -22,6 +20,10 @@ log = "0.4.8"
 pdb = { git = "https://github.com/willglynn/pdb" }
 url = "2.1.0"
 win_key_codes = "0.1.2"
+flow-bridge = { path = "../connectors/flow-bridge", optional = true }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs", optional = true }
 
 [features]
 default = []
