fixed compilation with flow-derive
Former-commit-id: e555282e6c9cb81e8b0e1db1502cff934666364b

--- a/connectors/flow-pcileech/Cargo.toml
+++ b/connectors/flow-pcileech/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 flow-core = { path = "../../flow-core" }
+flow-derive = { path = "../../flow-derive" }
 log = { version = "0.4.8", default-features = false }
 
 [dev-dependencies]
