--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -9,9 +9,9 @@ dataview = "0.1"
 byteorder = "1.3.2"
 log = { version = "0.4.8", default-features = false }
 regex = "1.3.1"
-unicorn = { version = "0.9.1", optional = true }
+#unicorn = { version = "0.9.1", optional = true }
 
 [features]
 default = []
 bridge = [] # enables the connector bridge (requires tokio)
-emulator = ["unicorn"] # enables the process emulator (requires unicorn engine)
+#emulator = ["unicorn"] # enables the process emulator (requires unicorn engine)
