fixed ffi build path
Former-commit-id: a13956025672768b4a550d0710b03f701558a3d6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,8 +65,8 @@ linux-native-ffi-example:
     - rustc --version
     - cargo --version
     - cargo build --release
-    - cd bindings/c/
-    - gcc -g example.c -o example -Wl,-rpath,../../target/release -lmemflow -L./../../target/release
+    - cd flow-ffi/bindings/c/
+    - gcc -g example.c -o example -Wl,-rpath,../../../target/release -lmemflow -L./../../../target/release
 
 linux-musl:
   stage: build_cross
