--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -17,6 +17,7 @@ serde = "1.0.97"
 serde_derive = "1.0"
 simple_logger = "1.0.1"
 log = "0.4.8"
+libc = "0.2.69"
 pdb = { git = "https://github.com/willglynn/pdb" }
 url = "2.1.0"
 win_key_codes = "0.1.2"
