Added Win32 Keystate Code + Example; Renamed ModuleTrait to Module and ProcessTrait to Process
Former-commit-id: 41f4321db0461ff66bda31161d42417202644a3b

--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -21,3 +21,12 @@ pdb = { git = "https://github.com/willglynn/pdb" }
 url = "2.1.0"
 failure = { version = "0.1.6", features = [] }
 widestring = "0.4.0"
+
+[dev_dependencies]
+simple_logger = "1.0.1"
+flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }
+win_key_codes = "0.1.2"
+
+[[example]]
+name = "read_keys"
+path = "examples/read_keys.rs"
