Add read and vat benchmarks for use with cargo bench

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 ]
 default-members = [
     "flow-core",
-    "flow-derive",
+    #"flow-derive",
     "flow-win32",
     #"flow-ffi",
     "flow-cli",
