--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -9,6 +9,8 @@ dataview = "0.1"
 byteorder = "1.3.2"
 log = { version = "0.4.8", default-features = false }
 regex = "1.3.1"
+bitflags = "1.2.1"
+coarsetime = "0.1.13"
 #unicorn = { version = "0.9.1", optional = true }
 
 [features]
