--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-dataview = "0.1"
+dataview = { version = "0.1", features = ["derive_pod"] }
 byteorder = "1.3.2"
 log = { version = "0.4.8", default-features = false }
 regex = "1.3.1"
