Fix cargo test breaking
Former-commit-id: e4eae857301bbf012fcb208c08e324efe381ca9a

--- a/flow-derive/Cargo.toml
+++ b/flow-derive/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 
 [lib]
-name = "flow_derive"
+test = false
+bench = false
 proc-macro = true
 
 [dependencies]
