--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
 ]
 default-members = [
     "flow-core",
-    #"flow-derive",
+    "flow-derive",
     "flow-win32",
     #"flow-ffi",
     "flow-cli",
