--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -42,5 +42,9 @@ name = "read_keys"
 path = "examples/read_keys.rs"
 
 [[example]]
+name = "write_keys"
+path = "examples/write_keys.rs"
+
+[[example]]
 name = "read_bench"
 path = "examples/read_bench.rs"
