--- a/flow-core/Cargo.toml
+++ b/flow-core/Cargo.toml
@@ -13,6 +13,11 @@ bitflags = "1.2.1"
 coarsetime = "0.1.13"
 #unicorn = { version = "0.9.1", optional = true }
 
+[dev-dependencies]
+flow-derive = { path = "../flow-derive" }
+x86_64 = { version = "0.10.2", default-features = false, features = ["stable"] }
+rand = "0.7.3"
+
 [features]
 default = []
 bridge = [] # enables the connector bridge (requires tokio)
