Added proper Sized and ?Sized constraints for phys mem, virt mem and vat traits. Implemented basic FFI examples.
Former-commit-id: f8b9454e3f3625c76e7bd328d1423af9793eec49

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     "flow-core",
     "flow-derive",
     "flow-win32",
-    #"flow-ffi",
+    "flow-ffi",
     "flow-cli",
     "connectors/flow-bridge",
     "connectors/flow-qemu-bridge",
@@ -18,6 +18,6 @@ default-members = [
     "flow-core",
     "flow-derive",
     "flow-win32",
-    #"flow-ffi",
+    "flow-ffi",
     "flow-cli",
 ]
