--- a/connectors/flow-qemu-procfs/Cargo.toml
+++ b/connectors/flow-qemu-procfs/Cargo.toml
@@ -9,6 +9,7 @@ flow-core = { path = "../../flow-core" }
 flow-derive = { path = "../../flow-derive" }
 procfs = "0.7.8"
 log = { version = "0.4.8", default-features = false }
+simple_logger = "1.0.1"
 
 [dev-dependencies]
 clap = "2.33.0"
