--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ linux-native-ffi-example:
     - cargo --version
     - cargo build --release
     - cd flow-ffi/bindings/c/
-    - gcc -g example.c -o example -Wl,-rpath,../../../target/release -lmemflow -L./../../../target/release
+    - gcc -g example.c -o example -Wl,-rpath,../../../target/release -lflow_ffi -L./../../../target/release
 
 linux-musl:
   stage: build_cross
