--- a/flow-ffi/Cargo.toml
+++ b/flow-ffi/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 
 [lib]
-name = "memflow"
+name = "flow_ffi"
 crate-type = ["cdylib"]
 
 [dependencies]
