--- a/connectors/flow-qemu-procfs/Cargo.toml
+++ b/connectors/flow-qemu-procfs/Cargo.toml
@@ -10,6 +10,7 @@ flow-derive = { path = "../../flow-derive" }
 procfs = "0.7.8"
 log = { version = "0.4.8", default-features = false }
 simple_logger = "1.0.1"
+libc = "0.2.70"
 
 [dev-dependencies]
 clap = "2.33.0"
