--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ default-members = [
     "flow-core",
     "flow-derive",
     "flow-win32",
-    "flow-ffi",
+    #"flow-ffi",
     "flow-cli",
 ]
