Add flow-bench to Cargo.toml
Former-commit-id: eb2e5cbfef633f96262ea6ba49926d5d6828f5eb

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "flow-win32",
     "flow-ffi",
     "flow-cli",
+	"flow-bench",
     "connectors/flow-bridge",
     "connectors/flow-qemu-bridge",
     "connectors/flow-qemu-procfs",
@@ -20,4 +21,5 @@ default-members = [
     "flow-win32",
     #"flow-ffi",
     "flow-cli",
+	"flow-bench"
 ]
