Removed unnecessary code; Temporarily disabled bridge from compilation paths
Former-commit-id: be5d43dc9519ff2add05815c140e2e4ec8bb2312

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,8 @@ debug = true
 [workspace]
 members = [
     "flow-core",
-    "flow-derive",
     "flow-win32",
-    "flow-ffi",
+    #"flow-ffi",
     "flow-cli",
     "flow-bench",
     #"connectors/flow-bridge",
@@ -17,9 +16,8 @@ members = [
 ]
 default-members = [
     "flow-core",
-    "flow-derive",
     "flow-win32",
-    "flow-ffi",
+    #"flow-ffi",
     "flow-cli",
     "flow-bench"
 ]
