--- a/flow-cli/Cargo.toml
+++ b/flow-cli/Cargo.toml
@@ -18,7 +18,7 @@ simple_logger = "1.0.1"
 log = "0.4.8"
 libc = "0.2.69"
 pdb = { git = "https://github.com/willglynn/pdb" }
-pelite = { git = "https://github.com/CasualX/pelite", branch = "master" }
+pelite = { git = "https://github.com/ko1n/pelite" }
 url = "2.1.0"
 win_key_codes = "0.1.2"
 #flow-bridge = { path = "../connectors/flow-bridge", optional = true }
