--- a/flow-win32/Cargo.toml
+++ b/flow-win32/Cargo.toml
@@ -10,7 +10,7 @@ log = { version = "0.4.8", default-features = false }
 byteorder = "1.3.2"
 dataview = "0.1"
 num = "0.2.0"
-pelite = { git = "https://github.com/CasualX/pelite", branch = "master" }
+pelite = { git = "https://github.com/ko1n/pelite" }
 scroll = "0.9"
 pretty-hex = "0.1.1"
 clap = "2.33.0"
