--- a/flow-bench/Cargo.toml
+++ b/flow-bench/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 flow-core = { path = "../flow-core", features = ["dummy_mem"] }
 rand = "0.5"
 # This branch provides throughput plots
-criterion = { git = "https://github.com/Heep042/criterion.rs.git", branch = "tput" }
+criterion = { git = "https://github.com/h33p/criterion.rs.git", branch = "tput" }
 flow-win32 = { path = "../flow-win32" }
 flow-qemu-procfs = { path = "../connectors/flow-qemu-procfs" }
 
@@ -17,7 +17,6 @@ flow-core = { path = "../flow-core", features = ["dummy_mem"] }
 rand = "0.5"
 # This branch provides throughput plots
 flow-win32 = { path = "../flow-win32" }
-#criterion = { git = "https://github.com/Heep042/criterion.rs.git", branch = "tput" }
 
 [[bench]]
 name = "read_dummy"
